After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683311 - Leak in GtkIconViewAccessible
Leak in GtkIconViewAccessible
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Accessibility
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-09-04 07:34 UTC by Claudio Saavedra
Modified: 2013-02-11 05:42 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Claudio Saavedra 2012-09-04 07:34:25 UTC
==28316== 24 bytes in 1 blocks are definitely lost in loss record 6,265 of 22,433
==28316==    at 0x4A0884D: malloc (vg_replace_malloc.c:263)
==28316==    by 0x8D7C467: standard_malloc (gmem.c:85)
==28316==    by 0x8D7C4F0: g_malloc (gmem.c:159)
==28316==    by 0x8D9472D: g_slice_alloc (gslice.c:1003)
==28316==    by 0x8D9476D: g_slice_alloc0 (gslice.c:1029)
==28316==    by 0x8D70C2D: g_list_alloc (glist.c:129)
==28316==    by 0x8D70EA4: g_list_insert_before (glist.c:349)
==28316==    by 0x863B285: gtk_icon_view_item_accessible_info_new (gtkiconviewaccessible.c:877)
==28316==    by 0x863B471: gtk_icon_view_accessible_ref_child (gtkiconviewaccessible.c:942)
==28316==    by 0x894608A: atk_object_ref_accessible_child (atkobject.c:827)
==28316==    by 0x65B4C89: append_children (accessible-cache.c:241)
==28316==    by 0x65B4E67: add_pending_items (accessible-cache.c:291)
==28316==    by 0x8D769D8: g_idle_dispatch (gmain.c:4797)
==28316==    by 0x8D74395: g_main_dispatch (gmain.c:2707)
==28316==    by 0x8D74F45: g_main_context_dispatch (gmain.c:3211)
==28316==    by 0x8D75128: g_main_context_iterate (gmain.c:3282)
==28316==    by 0x8D751EC: g_main_context_iteration (gmain.c:3343)
==28316==    by 0x8BD2EF3: g_application_run (gapplication.c:1607)
==28316==    by 0x430D6B: main (ephy-main.c:499)
Comment 1 André Klapper 2012-09-10 08:48:04 UTC
I hope you don't really run gtk+ 3.3.x (Version field) but 3.5.x instead. :)